<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.calculette.MainActivity">
    <item
        android:id="@+id/sms_off"
        android:orderInCategory="100"
        android:title="@string/no_sms"
        app:showAsAction="never" />
    <!--android:icon="@drawable/ic_launcher"-->
    <item
        android:id="@+id/sms_activity"
        android:orderInCategory="100"
        android:title="@string/activity_sms"
        app:showAsAction="never" />
    <item
        android:id="@+id/sms_service"
        android:orderInCategory="100"
        android:title="@string/service_sms"
        app:showAsAction="never" />
    <item
        android:id="@+id/toast_off"
        android:orderInCategory="100"
        android:title="@string/toast_off"
        app:showAsAction="never" />
    <item
        android:id="@+id/toast_on"
        android:orderInCategory="100"
        android:title="@string/toast_on"
        app:showAsAction="never" />
</menu>
