<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/stack" />

        <TextView
            android:id="@+id/stack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ddd"
            android:padding="5dp"
            android:text="@string/stack_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/result" />

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ddd"
            android:padding="5dp"
            android:text="@string/result_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/entry" />

        <EditText
            android:id="@+id/printed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ddd"
            android:inputType="number"
            android:padding="5dp">
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/empiler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empiler"
            android:drawableStart="@drawable/empiler"
            android:drawableLeft="@drawable/empiler"
            android:drawablePadding="5dp"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="12sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text="@string/operations" />

        <Button
            android:id="@+id/plus"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:onClick="add"
            android:text="@string/plus"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="13sp" />

        <Button
            android:id="@+id/moins"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:onClick="sub"
            android:text="@string/moins"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="13sp" />

        <Button
            android:id="@+id/mul"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:onClick="mul"
            android:text="@string/mul"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="13sp" />

        <Button
            android:id="@+id/div"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:onClick="div"
            android:text="@string/div"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="13sp" />

        <Button
            android:id="@+id/undo"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:onClick="undo"
            android:text="@string/undo"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="13sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="34dp"
            android:layout_height="wrap_content"
            android:onClick="clear"
            android:text="@string/clear"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:textSize="13sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/capacity"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="@integer/calc_stack_capacity" />

</LinearLayout>